--- a/snake.css
+++ b/snake.css
@@ -1,18 +1,37 @@
-.snake {
+#snake {
   background: green !important;
-  z-index: 3;
+  opacity: .7 !important;
 }
 
 .apple {
   background: red !important;
-  z-index: 2;
+  opacity: .7 !important;
 }
 
 .cell {
+  margin: 3px;
   float: left;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   background: #eee;
+  opacity: .6;
+  border-radius: 4px;
+/*  border: solid gray 1px;*/
+}
 
-  border: solid gray 1px;
+.board {
+  padding-top: 25px;
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*h1 {
+  margin: auto;
+  width: 105px;
+}*/
+
+.row {
+  margin: 5px;
+  width: 550px;
 }
